fixed spacing in led div

--- a/index.css
+++ b/index.css
@@ -147,7 +147,9 @@ h3 {
     flex-direction: column;
     width: 45%;
     height: 75%;
-    margin: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-top: -80px
 }
 
 #led-text h5 {
@@ -159,18 +161,17 @@ h3 {
     font-size: 20px;
 }
 
-
-@media screen and (max-width: 825px) {
+@media screen and (max-width: 830px) {
     #LED {
         flex-direction: column;
     }
     #led-pic {
-        width: 75%;
+        width: 80%;
         height: 45%;
         margin: 20px;
     }
     #led-text {
-        width: 75%;
+        width: 80%;
         height: 45%;
         margin: 20px;
     }
